fix: Remove overflowing content on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,14 +32,18 @@
   padding: 0;
 }
 
+
 body {
-  overflow-x: hidden;
   background-color: var(--background-primary);
   color: var(--text-primary);
 
   font-family: var(--font-text);
   font-weight: 400;
   font-size: 1rem;
+}
+
+.body-container {
+  overflow-x: hidden;
 }
 
 ul {
